Added branch git codes to readme file and created a button to show alert message

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div class="container">
         <div class="greet">Hello Brother</div>
         <div class="msg">This is a message</div>
+        <button onclick="alertmsg()">Click me</button>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
